--- a/seance2_JQuery/exemple1/index.html
+++ b/seance2_JQuery/exemple1/index.html
@@ -9,6 +9,7 @@
 <body>
     <p>Jquery</p>
 
+    <!--<script src="js/jquery.js"></script>-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!--//Les animations ne fonctionnent pas avec la bibliothèque JQuery slim -->
     <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>--> 
