--- a/seance2_JQuery/exemple9/index.html
+++ b/seance2_JQuery/exemple9/index.html
@@ -10,6 +10,7 @@
 <body>
     <div><p class="texte">Hello</p></div>
     <div><p>Hello Again</p></div>
+    <div><p class="texte">Hello Again Again</p></div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-color/2.1.2/jquery.color.js"></script>
